<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_tools</name>
  <version>0.0.0</version>
  <description>Pointcloud-based tools (RealSense) for tracking/intention/safety</description>
  <maintainer email="reopi0812@gmail.com">kadowaki</maintainer>
  <license>Apache-2.0</license>

  <!-- ✅ Python package build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ✅ runtime deps (最低限。あなたのノード群ならほぼ必要) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
